# AIE6

./: tatus
01_Prompt Engineering and Prototyping Best Practices/: README.md
02_Embeddings_and_RAG/: Pythonic_RAG_Assignment.ipynb  pyproject.toml
02_Embeddings_and_RAG/aimakerspace/: vectordatabase.py
04_Production_RAG/: Assignment_Introduction_to_LCEL_and_LangGraph_LangChain_Powered_RAG.ipynb  LangSmith_and_Evaluation.ipynb  enhanced_rag_graph.py  example_usage.py  rag_components.py
05_Our_First_Agent_with_LangGraph/: Introduction_to_LangGraph_for_Agents_Assignment_Version.ipynb
06_Multi_Agent_with_LangGraph/: Multi_Agent_RAG_LangGraph.ipynb  Multi_Agent_RAG_LangGraph_Bkup.ipynb
07_Synthetic_Data_Generation_and_LangSmith/: Synthetic_Data_Generation_RAGAS_&_LangSmith_Assignment.ipynb  ai_across_years_kg.json
08_Evaluating_RAG_With_Ragas/: Evaluating_Agents_with_Ragas_(2025)_AI_Makerspace.ipynb  Evaluating_RAG_with_Ragas_(2025)_AI_Makerspace.ipynb
08_Evaluating_RAG_With_Ragas/data/: 2023_llms.html  2024_llms.html
09_Finetuning_Embeddings/: .gitignore  Fine_tuning_Embedding_Models_for_RAG_Notebook.ipynb  pyproject.toml
10_Finetuning_Reasoning_Model/: AI_Makerspace_Unsloth_GRPO_Training_sp.ipynb
12_OpenAI_Agents_SDK/: OpenAI_Agents_SDK.ipynb
13_Advanced_Retrieval/: Advanced_Retrieval_with_LangChain_Assignment.ipynb  pyproject.toml
14_Open_DeepResearch/: open-deep-research copy.ipynb
15_Open_Source_Endpoints/: Open_Source_RAG_Leveraging_Hugging_Face_Endpoints_through_LangChain.ipynb
15_Open_Source_Endpoints/Application_Start/: app.py
(+3 files in other folders)
